tools/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: "#{Application.Namespace}#"
  labels:
    tribe: "#{Application.Tribe}#"
    squad: "#{Application.Squad}#"
